# litter

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  litter-start  opencode-start
.github/workflows/: android-apk-release.yml  android-play-closed.yml  android-play-release.yml  android.yml  ios-app-store-release.yml  ios-testflight.yml  ios.yml  mac-direct-dist.yml  mac-testflight.yml  mobile-ci.yml  mobile-release.yml  rust-bridge.yml
apps/android/: README.md  build.gradle.kts  kls_database.db  settings.gradle.kts
apps/ios/: project.yml
docs/: DEVELOPMENT.md  opencode-bridge-implementation-plan.md
scripts/: build-rust.sh  sync-codex.sh
shared/rust-bridge/codex-mobile-client/: Cargo.toml
shared/rust-bridge/codex-mobile-client/src/: aec.rs  ambient_suggestions.rs  android_exec.rs  capability.rs  conversation.rs  conversation_uniffi.rs  discovery.rs  discovery_uniffi.rs  ios_exec.rs  ish_exec.rs  ish_runtime.rs  ish_types.rs  lib.rs  local_runtime_instructions.rs  mobile_client_impl.rs  mobile_exec_command.rs  parser.rs  plugin_refs.rs  preferences.rs  project.rs  reconnect.rs  recorder.rs  remote_path.rs  saved_apps.rs  shell_preflight.rs  ssh.rs  uniffi_shared.rs  widget_guidelines.rs
shared/rust-bridge/codex-mobile-client/src/cloud_sync/: mod.rs
shared/rust-bridge/codex-mobile-client/src/ffi/: android.rs  app_store.rs  client.rs  discovery.rs  errors.rs  mod.rs  reconnect.rs  remote_path.rs  rpc.rs  shared.rs  ssh.rs
shared/rust-bridge/codex-mobile-client/src/local_server/: mod.rs
shared/rust-bridge/codex-mobile-client/src/mobile_client/: dynamic_tools.rs  event_loop.rs  minigame.rs  mod.rs  opencode.rs  store_listener.rs  tests.rs  thread_projection.rs
shared/rust-bridge/codex-mobile-client/src/pair/: mod.rs
shared/rust-bridge/codex-mobile-client/src/rpc/: client_impl.rs  generated_client.rs  mod.rs
shared/rust-bridge/codex-mobile-client/src/session/: connection.rs  events.rs
shared/rust-bridge/codex-mobile-client/src/store/: actions.rs  boundary.rs  mod.rs  reconcile.rs  reducer.rs  snapshot.rs  updates.rs  voice.rs
shared/rust-bridge/codex-mobile-client/src/types/: models.rs  server_requests.rs
shared/rust-bridge/codex-mobile-client/src/widget_guidelines/: app.md
shared/rust-bridge/codex-mobile-client/tests/: cloud_sync.rs  pair.rs
shared/rust-bridge/opencode-bridge/: Cargo.toml
shared/rust-bridge/opencode-bridge/examples/: live_phase3_smoke.rs  live_phase4_mapping.rs  live_smoke.rs
shared/rust-bridge/opencode-bridge/src/: capabilities.rs  client.rs  error.rs  events.rs  lib.rs  sse.rs  stream.rs  types.rs
shared/rust-bridge/opencode-bridge/src/mapping/: messages.rs  mod.rs  models.rs  permissions.rs  threads.rs
shared/rust-bridge/opencode-bridge/tests/: mapping_layer.rs  phase1_contract.rs  rest_client.rs  sse_client.rs
shared/rust-bridge/opencode-bridge/tests/fixtures/: event_global_message_updated.json  event_server_connected.sse.json  health.json  message_part_delta_text.json  message_part_updated_text.json  messages_text_reasoning_tool.json  mod.rs  path_info.json  permission_updated.json  project_current.json  provider_list.json  session_created.json  session_list.json  session_status.json  unknown_event.json  unknown_part.json
shared/rust-bridge/pi-mono-client/: Cargo.toml
shared/rust-bridge/pi-mono-client/src/: lib.rs  mapper.rs  protocol.rs  session.rs  transport.rs
(+364 files in other folders)
