[package]
name = "codex-mobile-client"
version = "0.1.0"
edition = "2024"
description = "Shared mobile client library for Codex iOS and Android apps"
license-file = "../../../LICENSE"

[lib]
name = "codex_mobile_client"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["tokio"] }
alleycat-client = { git = "https://github.com/dnakov/alleycat.git", branch = "main" }
codex-app-server = { workspace = true }
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-ipc = { path = "../codex-ipc" }
codex-protocol = { workspace = true }
codex-core = { workspace = true }
codex-exec-server = { workspace = true }
codex-login = { workspace = true }
codex-shell-command = { workspace = true }
codex-config = { workspace = true }
codex-cloud-requirements = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-git-utils = { workspace = true }
codex-feedback = { workspace = true }
codex-arg0 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
shlex = { workspace = true }
sha1 = "0.10"
hex = "0.4"
semver = { version = "1", default-features = false }

[features]
rpc-trace = []

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[target.'cfg(all(target_os = "ios", not(target_abi = "macabi")))'.dependencies]
codex-apply-patch = { workspace = true }
# iSH backend. Tracks the iSH repo's `main` branch — `cargo update -p
# ish-embed-host` pulls the latest.
ish-embed-host = { git = "https://github.com/dnakov/litter-ish.git", branch = "main" }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
